# galactic-war

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Taskfile.yml  config.yaml  flake.nix
.github/workflows/: codeberg-mirror.yml  docker-publish.yml
crates/lib/: Cargo.toml
crates/lib/migrations/: 001_initial_schema.sql  002_add_system_current_tick.sql  002_add_user_accounts.sql
crates/lib/src/: app.rs  app_config.rs  auth.rs  game_system.rs  lib.rs  persistence.rs  user_service.rs
crates/lib/src/db/: events.rs  galaxies.rs  mod.rs  structures.rs  systems.rs  users.rs
crates/lib/src/models/: events.rs  galaxy.rs  mod.rs  system.rs  user.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/future-plans/: combat.md  fleets.md  multiplayer.md  planned-features.md  qol.md  user-accounts.md
docs/src/game-details/: events.md  galaxy-config.md  overview.md  resources.md  structures.md
docs/src/technical/: api.md  architecture.md  development.md  persistence.md
docs/src/user-accounts/: authentication.md  galaxy-accounts.md  overview.md
galaxies/: blitz.yaml  classic.yaml
src/: app.rs  config.rs  island.rs  lib.rs  main.rs  persistence.rs  system.rs  utils.rs  web.rs
src/db/: events.rs  galaxies.rs  mod.rs  systems.rs
src/models/: events.rs  galaxy.rs  mod.rs  system.rs
worlds/: classic.yaml
