[package]
name = "galactic-war"
version = "0.1.0"
edition = "2021"
description = "A casual game of Galactic War"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
lazy_static = { version = "1", optional = true }

[features]
default = ["bin"]
bin = ["axum", "serde_yaml", "tokio", "lazy_static"]

[[bin]]
name = "galactic-war"
path = "src/main.rs"
required-features = ["bin"]
