[package]
name = "galactic-war"
version.workspace = true
description = "A casual game of Galactic War"
authors.workspace = true
edition.workspace = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["games"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
log = "0.4"

# Database persistence dependencies
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "migrate",
], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "1.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
default = []
db = ["sqlx", "chrono", "serde_json", "thiserror", "tokio", "serde_yaml"]
