[package]
name = "galactic-war"
version.workspace = true
description = "A casual game of Galactic War"
authors.workspace = true
edition.workspace = true
readme = "../../README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["games"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"

# Database persistence dependencies (now always included)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
argon2 = { version = "0.5" }
